--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/materialize-css/dist/css/materialize.css"
+
             ],
-            "scripts": []
+            "scripts": ["node_modules/materialize-css/dist/js/materialize.js"]
           },
           "configurations": {
             "production": {
@@ -94,5 +96,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "e64003ce-6670-4985-a2e9-8988c65bd06d"
   }
 }
